# motty

./: README.md  pyproject.toml
motty/: __init__.py  cli.py  config.py  engine.py
motty/connectors/: base.py  confluence.py  jira.py  mcp.py  nas.py  sharepoint.py
